<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangnhapactivityActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/ChaoMung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/textview1stringAcm"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:text="@string/truochethaydangnhap"

            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/tencuaban"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/Tencuaban"
            android:autofillHints="name"
            android:inputType="text"
            android:textAlignment="center"

            android:textSize="30sp"

            />


        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/checkbox1stringAcm"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/DANGNHAPBUTTON"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/button1stringAcm"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>